--- a/SleepyScene_Unity/.gitignore
+++ b/SleepyScene_Unity/.gitignore
@@ -70,3 +70,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# Scene Management Cache file
+/[Aa]ssets/SleepySceneManagement/SceneCache.asset
+/[Aa]ssets/SleepySceneManagement/SceneCache.asset.meta
